<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity">Udacity</string>
    <string name="udacity_web"><a href="https://www.udacity.com">www.udacity.com</a></string>
    <string name="location">2465 Latham St\nMountain View, CA 94043</string>
    <string name="phone_number">650&#8211;555&#8211;5555</string>
    <string name="copyright">© 2011–2017 Udacity, Inc.</string>
</resources>
