<?xml version="1.0" encoding="utf-8"?>
<!-- Begin root scroll view -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.helloandroid.MainActivity"
    >
    <!-- Begin base vertical layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue_gray"
        >
        <!-- Banner image, 200dp tall -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:src="@drawable/stat_udacity"
            android:scaleType="centerCrop"
            />
        <!-- Begin vertical layout to hold the cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_size"
            android:layout_weight="2"
            android:padding="@dimen/medium_spacing"
            android:orientation="vertical"
            >
            <!-- Begin horizontal layout for single card -->
            <LinearLayout
                style="@style/cardStyle"
                >
                <!-- The card's image -->
                <ImageView
                    style="@style/cardImageStyle"
                    android:src="@drawable/ic_code_black_24dp"
                    />
                <!-- The card's text -->
                <TextView
                    style="@style/cardTextStyle"
                    android:text="@string/udacity"
                    android:textAlignment="center"
                    />
            </LinearLayout>
            <!-- End horizontal layout for single card -->

            <!-- Begin horizontal layout for single card -->
            <LinearLayout
                style="@style/cardStyle"
                android:layout_marginTop="@dimen/medium_spacing"
                >
                <!-- The card's image -->
                <ImageView
                    style="@style/cardImageStyle"
                    android:src="@drawable/ic_phone_black_24dp"
                    />
                <!-- The card's text -->
                <TextView
                    style="@style/cardTextStyle"
                    android:text="@string/phone_number"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:autoLink="all"
                    />
            </LinearLayout>
            <!-- End horizontal layout for single card -->

            <!-- Begin horizontal layout for single card -->
            <LinearLayout
                style="@style/cardStyle"
                android:layout_marginTop="@dimen/medium_spacing"
                >
                <!-- The card's image -->
                <ImageView
                    style="@style/cardImageStyle"
                    android:src="@drawable/ic_home_black_24dp"
                    />
                <!-- The card's text -->
                <TextView
                    style="@style/cardTextStyle"
                    android:text="@string/udacity_web"
                    android:textAlignment="center"
                    android:autoLink="web"
                    />
            </LinearLayout>
            <!-- End horizontal layout for single card -->

            <!-- Begin horizontal layout for single card -->
            <LinearLayout
                style="@style/cardStyle"
                android:layout_marginTop="@dimen/medium_spacing"
                >
                <!-- The card's image -->
                <ImageView
                    style="@style/cardImageStyle"
                    android:src="@drawable/ic_location_on_black_24dp"
                    />
                <!-- The card's text -->
                <TextView
                    style="@style/cardTextStyle"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:autoLink="map"
                    />
            </LinearLayout>
            <!-- End horizontal layout for single card -->
        </LinearLayout>
        <!-- End vertical layout that holds the cards -->

        <!-- Begin horizontal layout for the footer -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/small_spacing"
            >
            <!-- The copyright text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_size"
                android:layout_marginBottom="@dimen/medium_spacing"
                android:gravity="center_vertical"
                android:text="@string/copyright"
                android:textAlignment="center" />
            <!-- Social media image (can turn it into link with java intents) -->
            <ImageView
                style="@style/iconStyle"
                android:src="@drawable/fb"
                />
            <!-- Social media image (can turn it into link with java intents) -->
            <ImageView
                style="@style/iconStyle"
                android:src="@drawable/twitter"
                />
            <!-- Social media image (can turn it into link with java intents) -->
            <ImageView
                style="@style/iconStyle"
                android:src="@drawable/instagram"
                />
            <!-- Social media image (can turn it into link with java intents) -->
            <ImageView
                style="@style/iconStyle"
                android:src="@drawable/linkedin"
                />
        </LinearLayout>
        <!-- End horizontal layout for the footer -->
    </LinearLayout>
    <!-- End base vertical layout -->
</ScrollView>
<!-- End root scroll view -->
